# nano-vllm

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
nanovllm/: config.py
nanovllm/engine/: llm_engine.py  model_runner.py  scheduler.py  sequence.py
nanovllm/layers/: activation.py  attention.py  layernorm.py  rotary_embedding.py  sampler.py
nanovllm/serve/: __init__.py  cli.py  engine.py  openai.py  text.py
nanovllm/utils/: context.py
resources/skills/serving-systems/: CLAUDE.md  OVERVIEW.md  README.md  SKILL.md
resources/skills/serving-systems/references/algorithms/: continuous-batching.md
resources/skills/serving-systems/references/backends/: cuda-graph.md  flashattention.md
resources/skills/serving-systems/references/engines/: sglang.md  trtllm.md  vllm.md
resources/skills/serving-systems/references/hardware/: amd-mi300.md  nvidia.md
resources/skills/serving-systems/references/models/: text-dense.md
resources/skills/serving-systems/references/tooling/: io-handling.md  openai-api.md  profiler.md
rust/nanovllm-serve/: Cargo.toml
rust/nanovllm-serve/src/: main.rs
tests/: test_compare_serving_bench.py  test_model_runner.py  test_scheduler_cancel.py  test_serving_cli.py  test_serving_engine.py  test_serving_openai.py  test_serving_text.py
tests/evals/gsm8k/: __init__.py  conftest.py  gsm8k_eval.py  test_gsm8k_correctness.py
tests/evals/gsm8k/configs/: models-small.txt  nanovllm-smoke.yaml
tools/: analyze_nsys.py  compare_serving_bench.py  nsys_online_profile.py  profile_bench.py  serving_benchmark_results.md
