[build-system]
requires = ["setuptools>=61", "setuptools-rust>=1.12.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm"
version = "0.2.0"
authors = [{ name = "Xingkai Yu" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.4.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "flash-attn",
    "xxhash",
    "pyzmq",
    "msgpack",
]

[project.scripts]
nanovllm = "nanovllm.serve.cli:main"
nanovllm-engine = "nanovllm.serve.engine:main"

[project.urls]
Homepage="https://github.com/GeeeekExplorer/nano-vllm"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*"]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[[tool.setuptools-rust.bins]]
target = "nanovllm-serve"
path = "rust/nanovllm-serve/Cargo.toml"
