[package]
name = "nanovllm-serve"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "nanovllm-serve"
path = "src/main.rs"

[dependencies]
async-stream = "0.3"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
futures-core = "0.3"
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
zmq = { version = "0.9", features = ["vendored"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
